# dummy_state_publisher

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: cvo.launch  fbow.launch  kitti.launch  pose_with_cov.launch  soulcity.launch
scripts/: soulcity.py  trajectory_transform.py
src/: depth_generator.cpp  depth_generator.hpp  state_publisher_node.cpp
src/fbowGen/: fbow_generator.cpp
